gccida/c2/schedule_insns
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3401:1: error: use of undeclared identifier 'deps_0'
deps_0 *v14; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3401:9: error: use of undeclared identifier 'v14'
deps_0 *v14; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3406:1: error: use of undeclared identifier 'deps_0'
deps_0 *v19; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3406:9: error: use of undeclared identifier 'v19'
deps_0 *v19; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3438:1: error: use of undeclared identifier 'deps_0'
deps_0 *v51; // r14 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3438:9: error: use of undeclared identifier 'v51'
deps_0 *v51; // r14 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3454:1: error: use of undeclared identifier 'deps_0'
deps_0 *v67; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3454:9: error: use of undeclared identifier 'v67'
deps_0 *v67; // rcx 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3576:1: error: use of undeclared identifier 'deps_0'
deps_0 *v189; // r14 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3576:9: error: use of undeclared identifier 'v189'
deps_0 *v189; // r14 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3589:1: error: use of undeclared identifier 'deps_0'
deps_0 *v202; // r9 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3589:9: error: use of undeclared identifier 'v202'
deps_0 *v202; // r9 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3683:4: error: expected ';' after expression
rtx headp; // [rsp+8h] [rbp-140h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3683:5: error: use of undeclared identifier 'headp'
rtx headp; // [rsp+8h] [rbp-140h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3690:1: error: use of undeclared identifier 'deps_0'
deps_0 *v304; // [rsp+40h] [rbp-108h] 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3690:9: error: use of undeclared identifier 'v304'
deps_0 *v304; // [rsp+40h] [rbp-108h] 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3702:1: error: use of undeclared identifier 'deps_0'
deps_0 deps; // [rsp+A0h] [rbp-A8h] BYREF 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3704:4: error: expected ';' after expression
rtx tailp[7]; // [rsp+110h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/sched-rgn.c:3704:5: error: use of undeclared identifier 'tailp'
rtx tailp[7]; // [rsp+110h] [rbp-38h] BYREF 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/schedule_insns/src/obj/sched-rgn.o] Error 1
